# SPH

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  eval_settings.json  vcpkg.json
.github/workflows/: ci.yml
cmake/: AddEigen3.cmake  CMakeCheckSetAVX.cmake  InstallDependencies.cmake  InstallDependencies.cmake.in
comparison/: README.md  comparison_pines_embed.json  comparison_pines_sph.json  comparison_pines_sph_euc.json  comparison_pines_sph_geo.json  comparison_rgb_bus_geo.json  comparison_salinas_sph.json  comparison_salinas_sph_euc.json  comparison_salinas_sph_geo.json
evaluation/: CMakeLists.txt  Evaluation.cpp  EvaluationSettings.cpp  EvaluationSettings.hpp  README.md  RunEvaluation.cpp  RunEvaluation.hpp
sph/: CMakeLists.txt  ComputeEmbedding.cpp  ComputeEmbedding.hpp  ComputeHierarchy.cpp  ComputeHierarchy.hpp  EmbedTsne.cpp  EmbedTsne.hpp  EmbedUmap.cpp  EmbedUmap.hpp  ImageHierarchy.cpp  ImageHierarchy.hpp  LevelSimilarities.cpp  LevelSimilarities.hpp  NearestNeighbors.cpp  NearestNeighbors.hpp
sph/utils/: AStar.cpp  AStar.hpp  AStarBoost.cpp  AStarBoost.hpp  Algorithms.hpp  Cacheable.cpp  Cacheable.hpp  CommonDefinitions.hpp  Data.cpp  Data.hpp  DistanceCache.hpp  Distances.hpp  Embedding.cpp  Embedding.hpp  EuclidDistSpace.hpp  EvalIO.cpp  EvalIO.hpp  FileIO.cpp  FileIO.hpp  GeodesicPathSpace.hpp  Graph.cpp  Graph.hpp  GraphAdapterBoost.hpp  GraphBoost.hpp  GraphNormalization.cpp  GraphNormalization.hpp  GraphUtils.cpp  GraphUtils.hpp  HDILibHelper.hpp  Hierarchy.cpp  Hierarchy.hpp  Histogram.hpp  ImageHelper.cpp  ImageHelper.hpp  Knn.cpp  Knn.hpp  Logger.cpp  Logger.hpp  Math.cpp  Math.hpp  (+25 more)
tests/: AStarTest.cpp  AStarTest.hpp  CMakeLists.txt  HelperCatch2.hpp  HelperSPH.hpp  HierarchyTest.cpp  HierarchyTest.hpp  Tests.cpp  UtilsBenchmark.cpp  UtilsBenchmark.hpp  UtilsTests.cpp  UtilsTests.hpp
tests/data/SquareColors10x_noisy/: SquareColors10x_blue.tiff  SquareColors10x_green.tiff  SquareColors10x_red.tiff
vcpkg-overlays/faiss/: portfile.cmake  vcpkg.json
vis/: CMakeLists.txt  README.md  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  UtilsCompute.cpp  UtilsCompute.hpp  UtilsDefaults.hpp  Vis.cpp
vis/res/: Lines.geom  Lines.vert  Point.frag  Point.vert
